# helen

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  call_consensus.py  docker_test  helen.py  helen_train.py  post_process_hdf5.py  pre_process_hdf5.py  process_training_data.py  requirements.txt  setup.py  stitch.py  test.py  train.py
Dockerfile/: Dockerfile  helen_wrapper.sh
Dockerfile/docker_gpu/: Dockerfile
docs/: installation.md  non_sudo_walkthrough.md  results.md  runtime_cost.md  usage_local_install.md  v1_release_notes.md  walkthrough.md  walkthrough_docker.md  walkthrough_local.md  zymo_model_release.md
helen/: helen.py  helen_train.py  marginpolish.py
helen/modules/: marginpolish.cmake
helen/modules/headers/: pybind_api.h
helen/modules/python/: CallConsensusInterface.py  DataStore.py  DownloadModel.py  FileManager.py  Options.py  PairwiseAlignment.py  PolishInterface.py  Stitch.py  StitchInterface.py  TestInterface.py  TrainInterface.py  hyperbandInterface.py
helen/modules/src/: pybind_api.cpp
masked_regions/: GRCh38_masked_regions.bed
modules/: marginpolish.cmake
modules/python/: CallConsensusInterface.py  DataStore.py  DataStore_predict.py  DownloadModel.py  FileManager.py  Options.py  PairwiseAlignment.py  PolishInterface.py  Stitch.py  StitchInterface.py  TestInterface.py  TrainInterface.py  hyperbandInterface.py
modules/python/helper/: VCF_remove_phase.py  assess_summary_analyzer.py  quast_sv_extractor.py  test_pairwisealigner.py
modules/python/models/: ModelHander.py  TransducerModel.py  test.py  (+11 more)
(+16 files in other folders)
